# project-insight

./: .gitignore  CHANGELOG.md  LICENSE  OSS-READINESS-REPORT.md  README.md  T1-tickets.md  T3-tickets.md  pyproject.toml  spec-T1-shared-infrastructure.md  spec-T3-unified-schema.md  spec-T4-cleanup.md  spec.md
.claude/handoffs/: 2026-07-24-003444-v0.4.0-implementation-review.md  2026-07-24-005044-v0.4.1-p0-fixes-review.md
.github/workflows/: ci.yml
.scratch/v0.4.0/issues/: T1-file-refs.md  T2-local-graph-ext.md  T3-env-vars-ext.md  T4-strict-flag.md  T5-docs-update.md  T6-integration-test.md
docs/: SKILL_REFERENCE.md
docs/planning/: spec-v0.4.0-file-refs.md  spec-v0.4.1-p0-fixes.md
scripts/: project_insight.py  project_insight_v1.py
scripts/extractors/: __init__.py  deps.py  entries.py  env_vars.py  file_refs.py  imports.py  local_graph.py  model_refs.py  paths.py  patterns.py  tree.py  urls.py
tests/: conftest.py  test_deps.py  test_entries.py  test_env_vars.py  test_file_refs.py  test_imports.py  test_local_graph.py  test_model_refs.py  test_paths.py  test_patterns.py  test_project_insight.py  test_project_insight_v1.py  test_tree.py  test_urls.py
tests/legacy/: test_deps.py  test_entries.py  test_file_refs.py  test_imports.py  test_paths.py  test_urls.py
