[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-insight"
version = "0.3.0"
description = "省 token 的 AI agent 项目信息提取器。用正则从项目中精准提取关键信息，替代全量读取。"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/songxitao/project-insight"
Repository = "https://github.com/songxitao/project-insight"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[project.scripts]
project-insight = "project_insight:main"

